# calamares

src/libcalamaresui/: Branding.h  ViewManager.h
src/libcalamaresui/modulesystem/: ModuleManager.cpp
src/modules/keyboard/: Config.cpp  Config.h  KeyboardLayoutModel.cpp  KeyboardLayoutModel.h
src/modules/keyboardq/: KeyboardQmlViewStep.cpp
src/modules/locale/: Config.cpp  Config.h
src/modules/locale/timezonewidget/: TimeZoneImage.cpp
src/modules/partition/core/: BootLoaderModel.cpp  BootLoaderModel.h  DeviceModel.cpp  DeviceModel.h  PartitionCoreModule.cpp
src/modules/partition/gui/: PartitionSplitterWidget.cpp
src/modules/partitionq/: CMakeLists.txt  Config.cpp  Config.h  PartitionQmlViewStep.cpp  PartitionQmlViewStep.h
src/modules/plasmalnfq/: PlasmaQmlLnfViewStep.cpp
src/modules/summaryq/: Config.cpp  Config.h
src/modules/users/: Config.cpp  UsersPage.cpp  page_usersetup.ui
src/modules/usersq/: CMakeLists.txt  UsersQmlViewStep.cpp
src/modules/welcome/: Config.cpp  Config.h
src/modules/welcome/checker/: ResultsListWidget.cpp
src/modules/welcomeq/: WelcomeQmlViewStep.cpp
